@@ -129,6 +129,8 @@ public enum HSPMessages {
 	HOMEINVITE_ID_NOT_FOUND,
 	HOME_ARRIVED_AT,
 	HOME_DEPARTING_TO,
+	SPAWN_ARRIVED_AT,
+	SPAWN_DEPARTING_TO,
 	HOMEINVITE_ARRIVED_AT,
 	HOMEINVITE_DEPARTING_TO,
 	
