@@ -152,14 +152,14 @@ CMD_HOMELIST_NO_HOMES_FOUND=No homes found for %player% on world "%world%".
 #v1.7
 NO_LOCATION_FOUND=No location found.
 
-#V1.7.3
+#v1.7.3
 ERROR_ID_NUMBER_REQUIRED=%red%ERROR%default_color%: Id number required, was given: %white%%input%
 HOMEINVITE_DELETED=Invite id #%id% was deleted [home name=%home%, invitee=%invitee%]
 HOMEINVITE_ID_NOT_FOUND=No invite with id "%id%" was found. Type /hil to see your invites
-HOME_ARRIVED=You have arrived at home %home%
+HOME_ARRIVED_AT=You have arrived at home %home%
 HOME_DEPARTING_TO=Going to home %home%
-SPAWN_ARRIVED=You have arrived at spawn %spawn%
-SPAWN_DEPARTING_TO=Going to spawn %home%
+SPAWN_ARRIVED_AT=You have arrived at spawn %spawn%
+SPAWN_DEPARTING_TO=Going to spawn %spawn%
 HOMEINVITE_DEPARTING_TO=Going to home %home% (owned by player %player%)
 
 CMD_HOME_USAGE=/<command>
